# the_game

./: Cargo.toml  Makefile  readme.org  scheme.drawio
common/: Cargo.toml
common/src/: lib.rs
game/: Cargo.toml
main/: Cargo.toml
main/src/: main.rs
platform/: Cargo.toml
platform/src/: core.rs  lib.rs  window.rs
platform/src/graphics/: mod.rs  renderer.rs  resources.rs  window.rs
platform/src/graphics/shaders/fragment/: mod.rs
queue/: Cargo.toml
queue/src/: event.rs  lib.rs  receiver.rs  sender.rs
src/: main.rs
src/engine/: init_window.rs  mod.rs
src/platform/: core.rs
src/platform/graphics/: mod.rs  renderer.rs  resources.rs  window.rs
src/platform/graphics/shaders/: mod.rs
src/platform/graphics/shaders/fragment/: fs.rs
src/platform/graphics/shaders/vertex/: mod.rs  vs.rs
src/platform/graphics/window/: init_window.rs
world/: Cargo.toml
world/src/: lib.rs
